# gr-math

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  gr-math.cpp
.cache/clangd/index/: color.cpp.6F095A0AF1CA2ADD.idx  color.hpp.88E433916D86A591.idx  gVector2.hpp.F199946E52351206.idx  gmath.cpp.8B9AE37511787414.idx  gmath.hpp.AB86172C1B1AE9EA.idx  main.cpp.98DCCAD49CB6E04B.idx  matrix3x3.cpp.510883C2BA4CA300.idx  matrix3x3.hpp.539666FD0371188A.idx  matrix4x4.cpp.17CE71B1C1BD28A0.idx  matrix4x4.hpp.1B590D10B5296CAA.idx  quaternion.cpp.3F92BA372E44D0E4.idx  quaternion.hpp.AE0FB4BB79712E35.idx  rect.hpp.6887A2C512AD0F0B.idx  types.hpp.1E05F162583E84B3.idx  vector2.cpp.92E4B163115205B2.idx  vector2.hpp.6FCA0030C3DE82D6.idx  vector3.cpp.9E7A369545BFADA9.idx  vector3.hpp.038E95D05E28E703.idx  vector4.cpp.95132FAE6EC337B8.idx  vector4.hpp.F9E904FD2711E700.idx
include/: matrix3x3.h  vector4.h
include/gr-math/: aabb.hpp  boundbox.hpp  color.h  color.hpp  default.h  gVector2.hpp  gmath.h  gmath.hpp  mat3x3_operator.inl  mat4x4_operator.inl  matrix3x3.h  matrix3x3.hpp  matrix4x4.h  matrix4x4.hpp  quat_operator.inl  quaternion.h  quaternion.hpp  rect.h  rect.hpp  types.h  types.hpp  vec2_operator.inl  vec3_operator.inl  vec4_operator.inl  vector.hpp  vector2.h  vector2.hpp  vector3.h  vector3.hpp  vector4.h  vector4.hpp
src/: color.cpp  gmath.cpp  gmath.h  math.cpp  matrix3x3.cpp  matrix4x4.cpp  matrix4x4.h  quaternion.cpp  types.h  vector2.cpp  vector2.h  vector3.cpp  vector4.cpp
tests/: CMakeLists.txt  main.cpp
